# parable-coding-agent

./: .gitignore  Cargo.toml  GUIDE.md  INSTALL.md  LICENSE  README.md  install.sh
launcher/: menu.command.tmpl
modelfiles/: gemma4-coding.Modelfile  parable.Modelfile
src/: main.rs  mcp.rs  prompts.rs  tool_recovery.rs
